# wzdftpd

./: .cvsignore  AUTHORS  BUILD  CMakeLists.txt  CONTRIBUTORS  CTestConfig.cmake  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.options.defaults  Makefile.parser  NEWS  Permissions.ReadMeFirst  README  READMEDid you mean: DOWNER From 2430 (488) DR 1163 138 third DUNBAR PL EIGH 405 (1802 EALING LANE EAST WA EDEN PLACE Elshen (Third Test (Fizika EDGEWOOD EAST 97 (1065) EIGHTEENTH  TLS.ReadMeFirst  UPGRADING  acinclude.m4  aclocal.m4  autogen.sh  bootstrap  config.h.cmake  config.h.in  configure.in  doxygen.cfg  rollingbuild.sh  wzd-config.cmake  wzd-config.in  wzd.m4  wzd_tls.cnf  wzd_version.h.cmake  wzd_version.h.in  wzdftpd.pc.cmake  wzdftpd.pc.in
backends/: CMakeLists.txt  Makefile  Makefile.am
backends/mysql/: .cvsignore  CMakeLists.txt  Makefile.am  UPGRADING  dropall.sql  libmysql.h  libmysql_group.c  libmysql_main.c  libmysql_user.c  mysql_database_drop.sql  mysql_tables_create.sql  tables.sql
backends/pam/: CMakeLists.txt  Makefile.am  libpam.def  libpam_main.c
backends/pgsql/: .cvsignore  CMakeLists.txt  Makefile.am  UPGRADING  createusers.sql  dropall.sql  libpgsql.def  libpgsql.h  libpgsql_group.c  libpgsql_main.c  libpgsql_user.c  pgsql_database_create.sql  pgsql_database_drop.sql  pgsql_tables_create.sql  tables.sql
backends/plaintext/: .cvsignore  CMakeLists.txt  Makefile  Makefile.am  libplaintext.def  libplaintext_file.c  libplaintext_file.h  libplaintext_main.c  libplaintext_main.h  users.sample.cmake
backends/sqlite/: 00-create_table.sql  00-create_users_and_groups.sql  CMakeLists.txt  Makefile.am  libsqlite.def  libsqlite.h  libsqlite_group.c  libsqlite_group.h  libsqlite_main.c  libsqlite_main.h  libsqlite_user.c  libsqlite_user.h  sqlite_tables_create.sql
doc/: Makefile  Makefile.am  add_header_footer.pl  appendix_bugs.sgml  appendix_ref.sgml  authentication.sgml  commands_reference.sgml  common_backends.sgml  common_modules.sgml  config.sgml  cookies_reference.sgml  custom_commands.sgml  dev-architecture.xml  dev-backends.xml  dev-crontab.xml  dev-memory.xml  dev-modules.xml  faq.sgml  fix_css.sh  freebsd_notes.sgml  html_head.html  html_tail.html  installation.sgml  introduction.sgml  jadetex.cfg  license.sgml  programming_modules.sgml  sitebot.sgml  wzdFTPd.sgml  wzd_custom.dsl  wzdftpd-dev.xml  wzdftpd-docs.css  wzdftpd.sgml  zip_simple.pl  zip_simple.tcl
libwzd/: .cvsignore  CMakeLists.txt  Makefile.am  libwzd.c  libwzd.def  libwzd.h  libwzd_codes.c  libwzd_codes.h  libwzd_err.c  libwzd_err.h  libwzd_pv.h  libwzd_socket.c  libwzd_socket.h  libwzd_tls.c  libwzd_tls.h
libwzd-auth/: .cvsignore  Makefile.am  wzd_auth.c  wzd_auth.h  wzd_base64.c  wzd_base64.h  wzd_crypt.c  wzd_crypt.h  wzd_krb5.c  wzd_krb5.h  wzd_md5.c  wzd_md5.h  wzd_md5crypt.c  wzd_md5crypt.h  wzd_pam.c  wzd_pam.h  wzd_sha1.c  wzd_sha1.h  wzd_sha1_hash.c  wzd_tls.c  wzd_tls.h
libwzd-base/: .cvsignore  CMakeLists.txt  Makefile.am  dlist.c  dlist.h  hash.c  hash.h  libwzd-base.cmake  list.c  list.h  stack.c  stack.h  strpcpy.c  strpcpy.h  wzd_strlcat.c  wzd_strlcat.h  wzd_strptime.c  wzd_strptime.h  wzd_strtok_r.c  wzd_strtok_r.h
libwzd-base/attic/: wzd_strtok_r.c  wzd_strtok_r.h
libwzd-core/: CMakeLists.txt  Makefile.am  inet_ntop.c  inet_pton.c  libwzd_core.def  ls.c  ls.h  wzd_ClientThread.c  wzd_ClientThread.h  wzd_action.c  wzd_action.h  wzd_all.h  wzd_backend.c  wzd_backend.h  wzd_cache.c  wzd_cache.h  wzd_commands.c  wzd_commands.h  wzd_configfile.c  wzd_configfile.h  wzd_configloader.c  wzd_configloader.h  wzd_cookie_lex.l  wzd_crc32.c  wzd_crc32.h  wzd_crontab.c  wzd_crontab.h  wzd_data.c  wzd_data.h  wzd_debug.c  wzd_debug.h  wzd_dir.c  wzd_dir.h  wzd_events.c  wzd_events.h  wzd_file.c  wzd_file.h  wzd_fs.c  wzd_fs.h  wzd_group.c  (+55 more)
libwzd-core/arch/: CMakeLists.txt  Makefile.am  bsd.h  win32.h
libwzd-core/attic/: wzd_strtoull.h
libwzd-perl/: Makefile.am
libwzd-perl/ext/: .cvsignore  Makefile.PL.in  ppport.h  wzdftpd.pm  wzdftpd.xs
modules/: CMakeLists.txt  Makefile  Makefile.am
modules/debug/: CMakeLists.txt  Makefile.am  debug_backends.c  debug_backends.h  debug_commands.c  debug_commands.h  debug_context.c  debug_context.h  debug_crontab.c  debug_crontab.h  debug_modules.c  debug_modules.h  libwzd_debug.c  mod_debug.def
modules/dupecheck/: CMakeLists.txt  TODO  dupecheck.def  dupelog.c  dupelog.h  libwzd_dupecheck_commands.c  libwzd_dupecheck_commands.h  libwzd_dupecheck_dupelog.c  libwzd_dupecheck_dupelog.h  libwzd_dupecheck_events.c  libwzd_dupecheck_events.h  libwzd_dupecheck_main.c  libwzd_dupecheck_main.h
src/: .cvsignore  CHANGELOG  DOCS_XFERLOG_FORMAT  INSTALL  KNOWN_BUGS  Makefile  Makefile.am  Makefile.config  NOTES  TODO  doxygen.cfg  file_ginfo.txt  file_group.txt  file_groups.txt  file_help.txt  file_rules.txt  file_swho.txt  file_user.txt  file_users.txt  file_vfs.txt  file_who.txt  inet_ntop.c  inet_pton.c  list.c  list.h  ls.c  ls.h  passwd  stack.c  stack.h  users  users.sample  wzd.cfg  wzd.cfg.in  wzd.cfg.sample.in  wzd.h  wzd_ClientThread.c  wzd_ClientThread.h  wzd_ServerThread.c  wzd_ServerThread.h  (+91 more)
tests/: .cvsignore  CMakeLists.txt  Makefile.am  fake_backend.c  fake_backend.h  file_crc.txt  test_common.c  test_common.h  test_libwzd_codes.c  test_list.c  test_template.c  test_wzd_action.c  test_wzd_backend.c  test_wzd_cache.c  test_wzd_configfile.c  test_wzd_cookies.c  test_wzd_crc32.c  test_wzd_crontab.c  test_wzd_data.c  test_wzd_dir.c  test_wzd_events.c  test_wzd_fs.c  test_wzd_group.c  test_wzd_ip.c  test_wzd_log.c  test_wzd_messages.c  test_wzd_ratio.c  test_wzd_section.c  test_wzd_string.c  test_wzd_structs.c  test_wzd_threads.c  test_wzd_user.c  test_wzd_vfs.c
wzdftpd/: CMakeLists.txt  Makefile.am  NOTES  TODO  file_ginfo.txt  file_group.txt  file_groups.txt  file_help.txt  file_rules.txt  file_swho.txt  file_user.txt  file_users.txt  file_vfs.txt  file_who.txt  users.sample  wzd.cfg.sample.cmake  wzd.cfg.sample.in  wzd.pem  wzd_ServerThread.c  wzd_ServerThread.h  wzd_init_lex.l  wzd_main.c  wzd_savecfg.c
(+262 files in other folders)
