SUBDIRS(plaintext)

IF(WITH_MySQL)
  IF(MYSQL_FOUND)
    add_subdirectory(mysql)
  ENDIF(MYSQL_FOUND)
ENDIF(WITH_MySQL)

IF(WITH_PAM)
  IF(PAM_FOUND)
    add_subdirectory(pam)
  ENDIF(PAM_FOUND)
ENDIF(WITH_PAM)

IF(WITH_PostgreSQL)
  IF(POSTGRESQL_FOUND)
    add_subdirectory(pgsql)
  ENDIF(POSTGRESQL_FOUND)
ENDIF(WITH_PostgreSQL)

IF(WITH_SQLite3)
  IF(SQLITE3_FOUND)
    add_subdirectory(sqlite)
  ENDIF(SQLITE3_FOUND)
ENDIF(WITH_SQLite3)
