
noinst_LTLIBRARIES = libwzd_base.la

libwzd_base_ladir = ${e_prefix}/include/wzdftpd/libwzd-base

noinst_HEADERS = \
	wzd_strtok_r.h

libwzd_base_la_HEADERS = \
	hash.h \
	list.h \
	stack.h \
	wzd_strlcat.h

libwzd_base_la_SOURCES = \
	hash.c \
	list.c \
	stack.c \
	wzd_strlcat.c \
	wzd_strtok_r.c
